--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.2",
+    "youtube-dl-exec": "^2.4.6",
     "youtube-exec": "^1.0.4"
   },
   "devDependencies": {
