--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "youtube-dl-exec": "^2.4.6",
-    "youtube-exec": "^1.0.4"
+    "youtube-exec": "^1.0.4",
+    "ytdl-core": "^4.11.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.5",
