--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
+    "node-schedule": "^2.1.1",
     "ytdl-core": "^4.11.4"
   },
   "devDependencies": {
